# cyb_cpp

1_semester/exam/: CMakeLists.txt  k22_koval.cpp
1_semester/labs/lab_1/: ArensMethodGenerator.cpp  ArensMethodGenerator.h  CMakeLists.txt  FibonacciNumbersGenerator.cpp  FibonacciNumbersGenerator.h  Histogram.cpp  Histogram.h  InverseCongruentSequenceGenerator.cpp  InverseCongruentSequenceGenerator.h  LinearCongruentialGenerator.cpp  LinearCongruentialGenerator.h  LogarithmMethodGenerator.cpp  LogarithmMethodGenerator.h  PolarCoordinateMethodGenerator.cpp  PolarCoordinateMethodGenerator.h  PrimeFinder.cpp  PrimeFinder.h  QuadraticCongruentialGenerator.cpp  QuadraticCongruentialGenerator.h  RandomGenerator.cpp  RandomGenerator.h  RelationMethodGenerator.cpp  RelationMethodGenerator.h  SigmaMethodGenerator.cpp  SigmaMethodGenerator.h  UnionMethodGenerator.cpp  UnionMethodGenerator.h  main.cpp
1_semester/labs/lab_3/: CMakeLists.txt  main.cpp
1_semester/labs/lab_3/algorithm/: GrahamScan.cpp  GrahamScan.h  JarvisAndrewAlgorithm.cpp  JarvisAndrewAlgorithm.h  KirkpatrickSeidelAlgorithm.cpp  KirkpatrickSeidelAlgorithm.h  RecursiveAlgorithm.cpp  RecursiveAlgorithm.h
1_semester/labs/lab_3/geo/: Point.cpp  Point.h
1_semester/labs/lab_3/gui/: Button.cpp  Button.h  InfoArea.cpp  InfoArea.h  RadioButton.cpp  RadioButton.h  SelectionMenu.cpp  SelectionMenu.h
1_semester/labs/lab_3/gui/animation/: AnimationArea.cpp  AnimationArea.h  AnimationController.cpp  AnimationController.h
1_semester/labs/lab_3/gui/window/: HullWindow.cpp  HullWindow.h  MenuWindow.cpp  MenuWindow.h
1_semester/mkr/: CMakeLists.txt  main.cpp
1_semester/ping_pong/ping_pong_client/: Ball.cpp  Ball.h  CMakeLists.txt  PlayerBoard.cpp  client_main.cpp
1_semester/ping_pong/ping_pong_server/: Ball.cpp  Ball.h  CMakeLists.txt  PlayerBoard.h  Score.cpp  Score.h  server_main.cpp
