cmake_minimum_required(VERSION 3.17)
project(lab_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab_1 main.cpp LinearCongruentialGenerator.cpp LinearCongruentialGenerator.h QuadraticCongruentialGenerator.cpp QuadraticCongruentialGenerator.h FibonacciNumbersGenerator.cpp FibonacciNumbersGenerator.h UnionMethodGenerator.cpp UnionMethodGenerator.h InverseCongruentSequenceGenerator.cpp InverseCongruentSequenceGenerator.h SigmaMethodGenerator.cpp SigmaMethodGenerator.h PrimeFinder.cpp PrimeFinder.h Histogram.cpp Histogram.h RandomGenerator.cpp RandomGenerator.h PolarCoordinateMethodGenerator.cpp PolarCoordinateMethodGenerator.h RelationMethodGenerator.cpp RelationMethodGenerator.h LogarithmMethodGenerator.cpp LogarithmMethodGenerator.h ArensMethodGenerator.cpp ArensMethodGenerator.h)